# 6.8610_NLP_Project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/projects/-Users-ender-yang-Desktop-HU-Spring26-MIT6-861-6-8610_NLP_Project/memory/: MEMORY.md  feedback_keep_tests_rigorous.md  feedback_no_auto_run.md  feedback_separate_stages.md  project_status.md  user_profile.md
config/: models.yaml  pipeline.yaml  prompts.yaml
data/benchmark/: benchmark.jsonl
docker/: ds1000.Dockerfile
docs/: benchmark_guide.md  data_guide.md  project_status.md
documents/: Proposal - V2.docx  ambiguity_appendix.docx  appendix_ambicode_eval.docx
notebooks/: benchmark_demo.ipynb  evaluation_demo.ipynb
scripts/: download_data.py  normalize_ds1000.py  run_anchor_selection.py  run_perturbation.py  run_scaled_pipeline.py
src/data/: __init__.py  ds1000_normalizer.py  loaders.py  model.py  store.py
src/pipeline/: anchor_selection.py  perturbation.py  prompts.py  stage1_perturbation.py  stage2_entropy_gate.py  stage3_test_generation.py  stage4_exclusivity_gate.py
src/util/: __init__.py  llm.py  parsing.py  pipeline_runner.py  sandbox.py
